# promethean-soup

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.beads/: issues.jsonl
.github/workflows/: build-forager.yml  ci.yml
forager/: .gitignore  README.md  pom.xml
forager/src/main/java/nlb/: CollaborativeDocumentEditorModule.java  ContentModerationModule.java  FamilyTreeModule.java  TimedNotificationsModule.java  WhoToFollowModule.java
forager/src/test/java/nlb/: CollaborativeDocumentEditorModuleTest.java  ContentModerationModuleTest.java  FamilyTreeModuleTest.java  TimedNotificationsModuleTest.java  WhoToFollowModuleTest.java
promethean_soup/: hooks.py  modules.txt
promethean_soup/promethean_soup/doctype/mention/: mention.js  mention.json  mention.py  test_mention.py
promethean_soup/promethean_soup/workspace/promethean_soup/: promethean_soup.json
