[project]
name = "promethean_soup"
authors = [
    { name = "Valerie Kim", email = "valerie.kim.dev@gmail.com"}
]
description = "Follow papers and blogs. See who's talking about them. See what Prometheus was cooking."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
